--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,8 @@ dependencies = [
   "presidio-anonymizer>=2.2,<3",
   "regex==2023.12.25",
   "tiktoken>=0.5,<0.7",
-  "torch==2.0.1",
-  "transformers==4.38.2",
+  "torch>=2.0.1,<=2.2.2",
+  "transformers>=4.34.1,<=4.39.3",
   "span-marker==1.5.0",
   "structlog>=24"
 ]
